--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 twitter_username: username
 github_username: rguerraty
-minimal_mistakes_skin: "contrast"
+minimal_mistakes_skin: "mint"
 search: true
 
 # Build settings
@@ -61,6 +61,7 @@ author:
   name   : "Rafael"
   avatar : "/assets/images/bio-photo1.jpg"
   bio    : "PhD in Physics. Theoretical Cosmologist. FONDECYT Postdoctoral Fellow at Universidad Católica de Chile"
+  location : "Santiago, Chile"
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
