--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,8 @@ permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+header:
+  image: /assets/images/universo_cut.jpg
 
 include:
   - _pages
@@ -59,7 +61,7 @@ plugins:
 
 author:
   name   : "Rafael"
-  avatar : "/assets/images/bio.jpg"
+  avatar : "/assets/images/bio-photo.jpg"
   bio    : "PhD in Physics. Theoretical Cosmologist. FONDECYT Postdoctoral Fellow at Universidad Católica de Chile"
   location : "Santiago, Chile"
   links:
