--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ paginate: 5 # amount of posts to show
 paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 header:
-  image: /assets/images/universo_cut.jpg
+  image: "/assets/images/universo_cut.jpg"
 
 include:
   - _pages
