--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ plugins:
 
 author:
   name   : "Rafael"
-  avatar : "/assets/images/bio-photo.jpg"
+  avatar : "/assets/images/bio-photo.jpeg"
   bio    : "PhD in Physics. Theoretical Cosmologist. FONDECYT Postdoctoral Fellow at Universidad Católica de Chile"
   location : "Santiago, Chile"
   links:
