--- a/_config.yml
+++ b/_config.yml
@@ -120,7 +120,7 @@ author:
   email            : "rafael.bravo@uc.cl"
   links:
     - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
+      icon: "ai ai-google-scholar"
       # url: "mailto:your.name@email.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
