--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,6 +16,6 @@ main:
   - title: "About me"
     url: /about/ 
   - title: "Research"
-    url: /posts/
+    url: /research/
   - title: "Teaching"
-    url: /categories/
+    url: /posts/
