--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ analytics:
 author:
   name             : "Rafael Bravo Guerraty"
   avatar           : "/assets/images/bio-photo.jpeg"
-  bio              : "Cosmologist. Postdoctoral fellow at Pontificia Universidad Católica"
+  bio              : "Physicist"
   location         : "Santiago, Chile"
   email            : "rafael.bravo@uc.cl"
   links:
