--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ analytics:
 # Site Author
 author:
   name             : "Rafael Bravo Guerraty"
-  avatar           : "/assets/images/profile.jpeg"
+  avatar           : "/assets/images/perfil.jpg"
   bio              : "Physicist"
   location         : "Santiago, Chile"
   email            : "rafael.bravo@uc.cl"
