--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ baidu_site_verification  :
 
 # Social Sharing
 twitter:
-  username               : "rafalafelo"
+  username               : 
 facebook:
   username               :
   app_id                 :
