--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ analytics:
 author:
   name             : "Rafael Bravo Guerraty"
   avatar           : "/assets/images/perfil.jpg"
-  bio              : "Physicist"
+  bio              : "PhD in Physics"
   location         : "Santiago, Chile"
   email            : "rafael.bravo@uc.cl"
   links:
