--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,8 +19,8 @@ main:
     url: /research/
   - title: "Teaching"
     url: /teaching/
-  - title: Gallery
-    url: /gallery/
+  #- title: Gallery
+   # url: /gallery/
 
   #- title: "Profile"
    # url: /profile/
