research section updated format

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
   - title: "About me"
     url: /about/ 
   - title: "Research"
-    url: /research/
+    url: /myresearch/
   - title: "Teaching"
     url: /teaching/
 
